<resources>
    <string name="app_name">Academeet</string>
    <string name="login_account_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_type_scholar">Scholar</string>
    <string name="login_type_admin">Admin</string>
    <string name="login_button">Go</string>
    <string name="register_button">Register</string>
    <string name="getting_capcha_too_busily_hint">Capcha has been sent to you, please try again in %s seconds</string>
    <string name="register_password_not_equals_confirm_password">Password entered twice are inconsistent</string>
    <string name="register_username_is_empty">Username cannot be empty</string>
    <string name="register_password_is_empty">Password cannot be empty</string>
    <string name="register_phone_illegal">Your phone number is wrong format</string>
    <string name="title_activity_conf_detail">ConfDetailActivity</string>
    <string name="large_text">
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n
    </string>
    <string name="action_settings">Settings</string>
    <string name="login_welcome">Welcome! </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sess_detail">SessDetailActivity</string>
    <string name="login_with_error_password">Wrong username or password</string>
    <string name="login_user_not_exist">User not exists</string>
    <string name="wrong_status">Something is wrong...</string>
    <string name="title_activity_custom">CustomActivity</string>
    <string name="settings_title">Modify</string>
    <string name="execute_change">OK</string>
    <string name="backend_wrong">Server meets with some error</string>
    <string name="something_wrong">Something wrong</string>
    <string name="message_empty">Message should not be empty</string>
    <string name="chatroom_title">Chatting Room</string>
    <string name="update_password_ok">Update password successfully</string>
    <string name="update_avatar_ok">Update avatar successfully</string>
    <string name="update_password_fail">Fail to update password</string>
    <string name="password_wrong">Old password is wrong</string>
    <string name="change_date_ok">Change date successfully</string>
    <string name="press_again_exit">Press back again to exit</string>
    <string name="websocket_disconnect">Websocket has not connected, please wait or restart app</string>
    <string name="bind_successful">Bind activity and service successfully</string>
    <string name="disconnect_successful">Disconnect activity and service successfully</string>
    <string name="user_guide">"User Guide:"
        \n\t"Academeet is an application serving academic conferences, developed by THSS.\n\t The part you are looking at now is the notes part of the application.\n\t Click the New button in the lower right corner, you can create a new note. When notes are created, you can either edit them by click the note, or delete them by pressing the note. \n\t The data is stored in the server, so you don't need to worry about the data loss caused by replacing the phone."
"On the main interface of the application, you can view the content of the conference within one week before or after the current date. \n\tIn the options in the upper right corner, you can change the current date. Alternatively, you can click the search button in the lower right corner to search for the conference you want to view based on the conference name, organizer, and host as keywords. \n\tYou can add the conference to the favorites, or add the conference to the reminder(by swiping the conference item left) and export to the calendar."
\n\t"Each conference has a chatting room, where you can discuss the contents of the conference with other participants. Since the chat history is stored on the server, you can also view the history of the messages."
\n\t"Each conference consists of several sessions. Each session has several papers, you can download the pdf of paper directly from the app. And you can also make thumbs up or make comments on the session."</string>
</resources>
