<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="350dp"
        android:layout_height="47.94dp"
        android:src="@mipmap/logo"
        android:layout_marginTop="150dp"
        android:layout_gravity="center_horizontal"
        />

            <RadioGroup
                android:id="@+id/login_type_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@id/login_type_scholar_radio"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp">
                <RadioButton
                    android:id="@+id/login_type_scholar_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_type_scholar" />
                <RadioButton
                    android:id="@+id/login_type_admin_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:text="@string/login_type_admin"/>
            </RadioGroup>
        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="@integer/account_max_length"
            android:hint="@string/login_account_hint"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"/>
        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="@integer/password_max_length"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                android:id="@+id/login_button"
                android:onClick="startLogin"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register_button"
                android:text="@string/register_button"
                android:layout_marginLeft="40dp"
                android:onClick="startRegister"
                />
        </LinearLayout>

</LinearLayout>